mainAndThePeople/css/main.css
/* ... */
/* Main Page button MyPeople */
.button3 {
    background-color: inherit;
    border: none;
    color: white;
    margin-left: 4%;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-family: 'Bangers', cursive;
    font-size: 30px;
    position: relative;
}
.button3:hover{
    color: white;
}

.flagThing {
    background-color: #FF5722;
    position: absolute;
    left: 0;
    height: 50px;
    width: 280px;
    -webkit-transition: width 1s;
    transition: width 1s;
}

.flagThing:after {
    content: '';
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 25px 10px 25px 0;
    border-color: transparent #ffffff transparent transparent;
    position: absolute;
    right: 0;
    top: 0;

}

.flagThing:hover {
    width: 380px;
}

/* Person of the day picture and text */

.column {
    float: left;
    padding: 10px;
    padding-left: 0;
}
.left img {
    width: 15rem;
    height: 15rem;
    border: 3px solid #3F51B5;
    border-radius: 50%;
    left: 0;
    object-fit: cover;
}
.display-5{
    font-size:2rem;
    font-weight:300;
    line-height:1.2;
    margin-bottom: 1rem;
}
.person-circle img{
    width: 10rem;
    height: 10rem;
    border: 3px solid #3F51B5;
    border-radius: 50%;
    left: 0;
    object-fit: cover;
}
.also-color{
    color: #FF5722;
}
.button-circle{
    width: 10rem;
    height: 10rem;
    border-radius: 50%;
}
.collapsible {
    background-color: transparent;
    color: #444;
    cursor: pointer;
    width: 100%;
    border: none;
    text-align: left;
    outline: none;
    font-size: 15px;
}

.content {
    padding: 0 18px;
    display: none;
    overflow: hidden;
    background-color: #f1f1f1;
    position: relative;
}


/*COLLAPSIBLES FOR THE INDEX PAGE*/
.collapsible-content{
    display: none;
    background-color: red;
}

/* /////////////////////////////////////////////// */
/* footer */
.notsticky {
    position: relative;
}

/* ////////////////////////////////////////////// */

/* ////////////////////////////////////////////// */
/* thePeople page top menu (Teachers/Students) and search */

.middleMenu {
    margin: auto;
    position: inherit;
}

/* Teachers/Students buttons */
.middleMenuButtons {
    float: left;
    padding: 10pt;
    left: 0;
    position: absolute;
    display: inline;
    margin-top: -10px;
}

/* Student page */
.middleMenuButtons.on {

}

.middleMenuButtons a {
    color: white;
    text-decoration: none;
    font-family: 'Bangers', cursive;
    padding-right: 20pt;
    padding-left: 20pt;
    font-size: 17pt;
    margin-top: 10px;
    position: relative;
    top: 8px;
    left: 20px;
}

/*.middleMenuButtons a:hover {*/
/*border-bottom: 3px solid rgba(197, 202, 233, 0.8);*/
/*}*/
.flagThing.menu {
    width: 30px;
    background-color: #303F9F;
    -webkit-transition: width 1s;
    transition: width 1s;
}

.flagThing.menu.bottom {
    position: relative;
    top: 60px;
    margin-left: -13px;
}

.flagThing.menu:hover {
    width: 220px;
}

/* Search */
.middleMenuSearch {
    margin: auto;
    display: inline;
}

.middleMenuSearch input[type=text] {
    float: right;
    padding: 10px;
    font-size: 17px;
    border: 1px solid grey;
    width: 300px;
    background: #f1f1f1;
    border-radius: 8px 0 0 8px;

}

.middleMenuSearch button {
    position: inherit;
    float: right;
    width: 50px;
    padding: 10px;
    background: #FF5722;
    color: white;
    font-size: 17px;
    border: 1px solid grey;
    border-left: none; /* Prevent double borders */
    cursor: pointer;
    border-radius: 0 8px 8px 0;
    height: 47.5px;
}

.middleMenuSearch button:hover {
    background: #3F51B5;
}

.middleMenu::after {
    content: "";
    clear: both;
    display: table;
}

/* /////////////////////////////////////// */
/* The People pictures of users */

/* Create six equal columns that float next to each other */
.pics {
    margin: auto;
    width: 100%;
}

.user {
    position: relative;
    top: 60px;
    float: left;
    width: 16%;
    padding: 5px;
}


/* Clear floats */
.pics:after {
    content: "";
    display: table;
    clear: both;
}

/* Responsive layout - makes a two column-layout instead of six columns */
@media (max-width: 900px) {
    .user {
        width: 40%;
    }
}

/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@media (max-width: 600px) {
    .user {
        width: 95%;
    }
}

/* Setting the user pictures style */
.user {
    position: relative;
}

.userImage {
    display: block;
    width: 100%;
    height: auto;
}

/* Text and buttons appearing when hovering over the image */
.overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    width: 100%;
    opacity: 0;
    transition: .5s ease;
    background-color: #FF5722;
}

.user:hover .overlay {
    opacity: 1;
}

.userInfo {
    color: white;
    font-size: 20px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    text-align: center;
}

.contactLink {
    float: right;
    text-decoration: none;
    color: white;
    margin-right: 10px;
    background-color: transparent;
    border: none;

}

.contactLink:hover {
    /*border-bottom: 3px solid #3F51B5;*/
    border-bottom: 3px solid rgba(197, 202, 233, 0.8);
    color: white;
    text-decoration: none;
}

/* The Modal (background) */
.modal-popup {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}
/* ... */

